<resources>
    <string name="app_name">AnexosApp</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="msgcadastro">Ainda não tem cadatro? Cadastre-se</string>
    <string name="telefone">Telefone</string>
    <string name="salvar">Salvar</string>
    <string name="erro_generico">Algo de errado ocorreu, tente novamente!</string>
    <string name="erro_nome">Nome informado inválido ou vazio</string>
    <string name="erro_email">Email informado é inválido ou já está cadastrado</string>
    <string name="erro_telefone">Telefone informado é invalido</string>
    <string name="erro_alterar_senha">Senha informada não confere com a senha atual</string>
    <string name="erro_senha">A senha deve ter no minimo 6 digitos</string>
    <string name="usuario_senha_incorretos">Usuario ou senha incorretos</string>
    <string name="loggout">Sair</string>
    <string name="msg_loggout">Deseja realizar o loggout?</string>
    <string name="msg_sair">Deseja realmente sair?</string>
    <string name="anexos">Anexos</string>
    <string name="anexo">Anexo</string>
    <string name="tp_anexo">Tipo de Anexo</string>
    <string name="anexar">Anexar</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perfil">Perfil</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="erro_permissao">Erro de Permissão</string>
    <string name="erro_permissao_camera">Para anexar a foto você deve fornecer a permissão de câmera ao aplicativo</string>
    <string name="alerta_anexo">Já existe uma foto para este anexo, deseja substituir?</string>
    <string name="unrecognized_code">Código não reconhecido.</string>
    <string name="title_activity_fullscreen_anexo">FullscreenAnexoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="qrcode">QRCODE</string>
    <string name="abrir_qrcode">Deseja abrir o leitor de Código de barras?</string>
    <string name="anexo_vazio">Anexo vazio</string>
</resources>
